--- a/package.json
+++ b/package.json
@@ -18,21 +18,22 @@
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "element-ui": "2.4.6",
     "jquery": "^3.3.1",
     "js-cookie": "2.2.0",
+    "normalize.css": "7.0.0",
+    "nprogress": "0.2.0",
     "popper.js": "^1.14.3",
     "sweetalert2": "^7.19.3",
     "vform": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-good-table": "^2.16.0",
     "vue-i18n": "^7.6.0",
     "vue-meta": "^1.5.0",
     "vue-router": "^3.0.1",
-    "element-ui": "2.4.6",
-    "normalize.css": "7.0.0",
-    "nprogress": "0.2.0",
+    "vuejs-noty": "^0.1.3",
     "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0",
-    "vuejs-noty": "^0.1.3"
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
