--- a/.env
+++ b/.env
@@ -39,3 +39,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=uma2y9Oe35S5T7iaHIW8YE1HLcWZjWp5
+JWT_TTL=1440 
