--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.4.1",
     "@fortawesome/free-regular-svg-icons": "^5.4.1",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
-    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "element-ui": "2.4.6",
@@ -26,30 +26,30 @@
     "popper.js": "^1.14.3",
     "sweetalert2": "^7.19.3",
     "vform": "^1.0.0",
-    "vue": "^2.5.16",
+    "vue": "^2.5.22",
     "vue-good-table": "^2.16.0",
     "vue-i18n": "^7.6.0",
     "vue-meta": "^1.5.0",
     "vue-router": "^3.0.1",
     "vuejs-noty": "^0.1.3",
-    "vuex": "^3.0.1",
+    "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cross-env": "^5.1.5",
-    "eslint": "^5.7.0",
+    "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.0.0-beta.3",
+    "eslint-plugin-vue": "^5.1.0",
     "laravel-mix": "^2.1.11",
     "laravel-mix-svg-sprite": "0.0.1",
     "svg-sprite-loader": "^4.1.3",
-    "vue-template-compiler": "^2.5.16",
+    "vue-template-compiler": "^2.5.22",
     "webpack-bundle-analyzer": "^2.11.2"
   }
 }
