--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Green Card Information System"
 APP_ENV=local
 APP_KEY=base64:jC3wMdIsTLqRwGrj4Yid4gWGB4Xo08u5jZZs3PYpo9Q=
 APP_DEBUG=true
-APP_URL=http://git-admin.primie.loc
+APP_URL=http://gcis.pxs
 
 LOG_CHANNEL=stack
 
