--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "sweetalert2": "^7.19.3",
     "vform": "^1.0.0",
     "vue": "^2.5.22",
-    "vue-good-table": "^2.16.0",
     "vue-count-to": "1.0.13",
+    "vue-good-table": "^2.16.0",
     "vue-i18n": "^7.6.0",
     "vue-meta": "^1.5.0",
     "vue-router": "^3.0.1",
+    "vue-tables-2": "^1.4.70",
     "vuejs-noty": "^0.1.3",
     "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0"
@@ -40,6 +41,7 @@
   "devDependencies": {
     "babel-eslint": "^8.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.1.5",
     "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
