--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Green Card Information System"
 APP_ENV=local
 APP_KEY=base64:n41WTziCizMvnaGVowjx0V5q1tb3DlmoxkbF9K3G3ok=
 APP_DEBUG=true
-APP_URL=http://gcis.pxs
+APP_URL=http://git-admin.primie.loc
 
 LOG_CHANNEL=stack
 
