--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "chart.js": "^2.7.3",
     "echarts": "4.1.0",
     "element-ui": "2.4.6",
     "jquery": "^3.3.1",
@@ -32,6 +33,7 @@
     "sweetalert2": "^7.19.3",
     "vform": "^1.0.0",
     "vue": "^2.5.22",
+    "vue-chartjs": "^3.4.0",
     "vue-count-to": "1.0.13",
     "vue-good-table": "^2.16.0",
     "vue-i18n": "^7.6.0",
