--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-router": "^3.0.1",
     "vue-tables-2": "^1.4.70",
     "vuejs-noty": "^0.1.3",
+    "vuetify": "^1.5.2",
     "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0"
   },
@@ -52,6 +53,8 @@
     "eslint-plugin-vue": "^5.1.0",
     "laravel-mix": "^2.1.11",
     "laravel-mix-svg-sprite": "0.0.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "svg-sprite-loader": "^4.1.3",
     "vue-template-compiler": "^2.5.22",
     "webpack-bundle-analyzer": "^2.11.2"
