--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/css/gcis.css": "/css/gcis.css",
     "/js/robust-admin-init.js": "/js/robust-admin-init.js",
     "/css/robust-admin.css": "/css/robust-admin.css",
+    "/css/jqwidgets/jqx.base.css": "/css/jqwidgets/jqx.base.css",
     "/js/robust-admin.js": "/js/robust-admin.js",
     "/favicon.ico": "/favicon.ico"
 }
