--- a/.env
+++ b/.env
@@ -6,6 +6,11 @@ APP_URL=http://git-admin.primie.loc
 
 LOG_CHANNEL=stack
 
+SQUARE_USER_NAMESPACE=App\User
+SQUARE_APPLICATION_ID=sandbox-sq0idp-gzCuCDdgyfPKu2mHfQChGQ
+SQUARE_TOKEN=sandbox-sq0atb-DBuRA9bD_ZcE5Pk2OQ1ziQ
+SQUARE_LOCATION=CBASEFSiu0k0FNpm_Y_amKSb7o8gAQ
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
