--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "nikolag/laravel-square": "^2.2",
         "spatie/laravel-permission": "^2.29",
         "tymon/jwt-auth": "^1.0.0-rc.3"
     },
