--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sweetalert2": "^7.19.3",
     "vform": "^1.0.0",
     "vue": "^2.5.22",
+    "vue-barcode": "^1.2.0",
     "vue-chartjs": "^3.4.0",
     "vue-count-to": "1.0.13",
     "vue-good-table": "^2.16.0",
