--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "spatie/laravel-permission": "^2.29",
+        "spatie/laravel-medialibrary":"7.0.0",
+        "laravelcollective/html":"5.7",
         "tymon/jwt-auth": "^1.0.0-rc.3"
     },
 
@@ -23,7 +25,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "laravel/dusk":"^4.0"
     },
     "config": {
         "optimize-autoloader": true,
