migrated GCCv1 tables --WA

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+# After editing, run
+# php artisan config:cache
+
+# If that is not enough, run instead
+# php artisan config:clear
+
 APP_NAME="Green Card Information System"
 APP_ENV=local
 APP_KEY=base64:n41WTziCizMvnaGVowjx0V5q1tb3DlmoxkbF9K3G3ok=
@@ -5,8 +11,6 @@ APP_DEBUG=true
 APP_URL=http://git-admin.primie.loc
 
 LOG_CHANNEL=stack
-
-
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
