--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^2.7.3",
     "echarts": "4.1.0",
     "element-ui": "2.4.6",
+    "globalpayments-api": "^1.1.2",
     "jquery": "^3.3.1",
     "jqwidgets-scripts": "^6.2.0",
     "js-cookie": "2.2.0",
